# CalCulus-v0.3.0

./: .gitignore  CMakeLists.txt  README.md  setup.py
.github/workflows/: publish.yml
CalCulus_CPP +2/: calculus_core.cpp  pyproject.toml  setup.py
CalCulus_CPP +2/calculus/: __init__.py
calculus/: _core.py
